--- a/BatteryStatus/BatteryStatus.csproj
+++ b/BatteryStatus/BatteryStatus.csproj
@@ -58,6 +58,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NotSetTime.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NotSetTime.Designer.cs">
+      <DependentUpon>NotSetTime.cs</DependentUpon>
+    </Compile>
     <Compile Include="Utilities\Battery.cs" />
     <Compile Include="FrmMain.cs">
       <SubType>Form</SubType>
@@ -71,6 +77,9 @@
     <Compile Include="Utilities\Voice.cs" />
     <EmbeddedResource Include="FrmMain.resx">
       <DependentUpon>FrmMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NotSetTime.resx">
+      <DependentUpon>NotSetTime.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
