--- a/BatteryStatus/BatteryStatus.csproj
+++ b/BatteryStatus/BatteryStatus.csproj
@@ -19,15 +19,16 @@
     <Install>true</Install>
     <InstallFrom>Web</InstallFrom>
     <UpdateEnabled>true</UpdateEnabled>
-    <UpdateMode>Foreground</UpdateMode>
-    <UpdateInterval>7</UpdateInterval>
+    <UpdateMode>Background</UpdateMode>
+    <UpdateInterval>2</UpdateInterval>
     <UpdateIntervalUnits>Days</UpdateIntervalUnits>
-    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdatePeriodically>true</UpdatePeriodically>
     <UpdateRequired>true</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
     <InstallUrl>https://danielrinconr.github.io/BatteryStatus/Setup/publish/</InstallUrl>
     <UpdateUrl>https://danielrinconr.github.io/BatteryStatus/Setup/publish/</UpdateUrl>
     <SupportUrl>https://danielrinconr.github.io/BatteryStatus/</SupportUrl>
+    <TargetCulture>es-CO</TargetCulture>
     <ProductName>BatteryStatus</ProductName>
     <PublisherName>DanielRincón</PublisherName>
     <MinimumRequiredVersion>1.0.0.0</MinimumRequiredVersion>
@@ -64,10 +65,10 @@
     <SignManifests>true</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>090E2C8A3DF0F63434E704E27E783C2C6B15A636</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>8808918B510E31AB4394C75C91DA70C1A689FB1C</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>BatteryStatus_1_TemporaryKey.pfx</ManifestKeyFile>
+    <ManifestKeyFile>BatteryStatus_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateManifests>true</GenerateManifests>
@@ -91,6 +92,12 @@
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>BatteryStatus_TemporaryKey.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="AudioSwitcher.AudioApi, Version=3.0.0.209, Culture=neutral, PublicKeyToken=fda5729e2db3a64f, processorArchitecture=MSIL">
@@ -164,7 +171,7 @@
     <EmbeddedResource Include="Forms\FormVoiceSettings.resx">
       <DependentUpon>FormVoiceSettings.cs</DependentUpon>
     </EmbeddedResource>
-    <None Include="BatteryStatus_1_TemporaryKey.pfx" />
+    <None Include="BatteryStatus_TemporaryKey.pfx" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
